# grpc

./: CMakeLists.txt  README.md
docs/: Doxyfile
include/: grpc.h
scripts/: script.sh
src/app/: CMakeLists.txt  main.cpp
src/client/: client.cpp
src/grpc/: grpc.h
src/lib/: CMakeLists.txt  grpc.cpp
src/server/: server.cpp
src/test/: CMakeLists.txt  test_main.cpp
